--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,32 @@
+annotated-types==0.6.0
+anyio==3.7.1
 blinker==1.7.0
+branca==0.7.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
 click==8.1.7
 contourpy==1.2.0
 cycler==0.12.1
+distro==1.8.0
 Flask==3.0.0
+folium==0.15.1
 fonttools==4.44.0
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.25.2
+idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.2
 kiwisolver==1.4.5
 MarkupSafe==2.1.3
 matplotlib==3.8.1
 numpy==1.26.1
+openai==1.3.7
 packaging==23.2
 pandas==2.1.2
 Pillow==10.1.0
+pydantic==2.5.2
+pydantic_core==2.14.5
 PyMySQL==1.1.0
 pyngrok==7.0.0
 pyparsing==3.1.1
@@ -20,9 +34,15 @@ python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
 PyYAML==6.0.1
+requests==2.31.0
 seaborn==0.13.0
 six==1.16.0
+sniffio==1.3.0
 SQLAlchemy==2.0.23
+tqdm==4.66.1
 typing_extensions==4.8.0
 tzdata==2023.3
+urllib3==2.1.0
 Werkzeug==3.0.1
+xyzservices==2023.10.1
+gunicorn==19.7.1
